fix box alignment

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 }*/
 
 .head-container div {
+    justify-content: center;
     color: #E5E7EB;
     font-size: 18px;
     flex:1;
